syntax = "proto3";

package sonrhq.core.service;

import "gogoproto/gogo.proto";
import "core/service/record.proto";

option go_package = "github.com/sonrhq/core/x/service/types";

// GenesisState defines the service module's genesis state.
message GenesisState {
           Params               params                    = 1 [(gogoproto.nullable) = false];
  repeated ServiceRecord        serviceRecordList         = 2 [(gogoproto.nullable) = false];
  repeated ServiceRelationship serviceRelationshipsList  = 3 [(gogoproto.nullable) = false];
}

// Params defines the parameters for the module.
message Params {
  option (gogoproto.goproto_stringer) = false;
}

